@@ -19,6 +19,40 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
+import|;
+end_import
+
+begin_import
+import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|TestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -35,42 +69,6 @@ end_import
 
 begin_import
 import|import
-name|junit
-operator|.
-name|framework
-operator|.
-name|TestCase
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -83,55 +81,7 @@ name|serde2
 operator|.
 name|thrift
 operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|facebook
-operator|.
-name|thrift
-operator|.
-name|TException
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|facebook
-operator|.
-name|thrift
-operator|.
-name|transport
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|facebook
-operator|.
-name|thrift
-operator|.
-name|*
+name|TCTLSeparatedProtocol
 import|;
 end_import
 
@@ -145,21 +95,63 @@ name|thrift
 operator|.
 name|protocol
 operator|.
-name|*
+name|TField
 import|;
 end_import
 
 begin_import
 import|import
-name|org
+name|com
 operator|.
-name|apache
+name|facebook
 operator|.
-name|hadoop
+name|thrift
 operator|.
-name|conf
+name|protocol
 operator|.
-name|Configuration
+name|TList
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|facebook
+operator|.
+name|thrift
+operator|.
+name|protocol
+operator|.
+name|TMap
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|facebook
+operator|.
+name|thrift
+operator|.
+name|protocol
+operator|.
+name|TStruct
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|facebook
+operator|.
+name|thrift
+operator|.
+name|transport
+operator|.
+name|TMemoryBuffer
 import|;
 end_import
 
@@ -182,8 +174,6 @@ name|testReads
 parameter_list|()
 throws|throws
 name|Exception
-block|{
-try|try
 block|{
 name|TMemoryBuffer
 name|trans
@@ -447,6 +437,19 @@ argument_list|)
 decl_stmt|;
 name|prot
 operator|.
+name|initialize
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|,
+operator|new
+name|Properties
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|prot
+operator|.
 name|readStructBegin
 argument_list|()
 expr_stmt|;
@@ -619,14 +622,9 @@ operator|.
 name|readFieldEnd
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|hello
-operator|.
-name|length
-argument_list|()
-operator|==
-literal|0
 argument_list|)
 expr_stmt|;
 name|prot
@@ -635,27 +633,12 @@ name|readStructEnd
 argument_list|()
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 specifier|public
 name|void
 name|testWrites
 parameter_list|()
 throws|throws
 name|Exception
-block|{
-try|try
 block|{
 name|TMemoryBuffer
 name|trans
@@ -1013,6 +996,19 @@ argument_list|,
 literal|10
 argument_list|)
 expr_stmt|;
+name|prot
+operator|.
+name|initialize
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|,
+operator|new
+name|Properties
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// 100 is the start
 name|prot
 operator|.
@@ -1315,17 +1311,12 @@ operator|.
 name|readFieldBegin
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
 argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -1339,17 +1330,12 @@ operator|.
 name|readFieldBegin
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
 argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -1363,27 +1349,12 @@ name|readStructEnd
 argument_list|()
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 specifier|public
 name|void
 name|testQuotedWrites
 parameter_list|()
 throws|throws
 name|Exception
-block|{
-try|try
 block|{
 name|TMemoryBuffer
 name|trans
@@ -1712,17 +1683,12 @@ operator|.
 name|readFieldBegin
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
 argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -1736,17 +1702,12 @@ operator|.
 name|readFieldBegin
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
 argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -1760,19 +1721,6 @@ name|readStructEnd
 argument_list|()
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 comment|/**    * Tests a sample apache log format. This is actually better done in general with a more TRegexLike protocol, but for this    * case, TCTLSeparatedProtocol can do it.     */
 specifier|public
 name|void
@@ -1780,8 +1728,6 @@ name|test1ApacheLogFormat
 parameter_list|()
 throws|throws
 name|Exception
-block|{
-try|try
 block|{
 specifier|final
 name|String
@@ -1938,10 +1884,8 @@ operator|.
 name|readFieldEnd
 argument_list|()
 expr_stmt|;
-name|assertEquals
+name|assertNull
 argument_list|(
-literal|""
-argument_list|,
 name|identd
 argument_list|)
 expr_stmt|;
@@ -2086,27 +2030,12 @@ name|readStructEnd
 argument_list|()
 expr_stmt|;
 block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 specifier|public
 name|void
 name|testNulls
 parameter_list|()
 throws|throws
 name|Exception
-block|{
-try|try
 block|{
 name|TMemoryBuffer
 name|trans
@@ -2128,6 +2057,19 @@ argument_list|,
 literal|10
 argument_list|)
 decl_stmt|;
+name|prot
+operator|.
+name|initialize
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|,
+operator|new
+name|Properties
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|prot
 operator|.
 name|writeStructBegin
@@ -2392,6 +2334,19 @@ argument_list|)
 expr_stmt|;
 name|prot
 operator|.
+name|initialize
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|,
+operator|new
+name|Properties
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|prot
+operator|.
 name|readStructBegin
 argument_list|()
 expr_stmt|;
@@ -2413,14 +2368,9 @@ operator|.
 name|readFieldEnd
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|ret
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -2440,14 +2390,9 @@ operator|.
 name|readFieldEnd
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|ret
-operator|.
-name|equals
-argument_list|(
-literal|""
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|prot
@@ -2514,25 +2459,19 @@ operator|==
 literal|3
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
-argument_list|()
-operator|.
-name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
-argument_list|()
-operator|.
-name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2549,25 +2488,19 @@ literal|"key2"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
-argument_list|()
-operator|.
-name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|prot
 operator|.
 name|readString
-argument_list|()
-operator|.
-name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -2601,19 +2534,6 @@ operator|==
 literal|0
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 block|}
 end_class
